--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-scripts": "1.0.17",
-    "flux": "^3.1.0"
+    "flux": "^3.1.0",
+    "immutable": "3.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
